--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>sartaj alam</title>
+    <title>sartaj-alam</title>
     <link rel="icon" class="rounded" href="photo2.jpeg">
 
     <!-- Required meta tags -->
@@ -85,7 +85,7 @@
                     <p class="card-text text-light mx-5 fs-2 fontFam" style="font-size: 4vw !important; ">
                         My name is</p>
                     <p class="card-text text-light mx-5 fs-1 fontFam" style="font-size: 5vw !important; ">
-                        Sartaj</p>
+                        Sartaj Alam</p>
                     <p><small class="text-light mx-5 fs-1 fontFam" style="font-size: 2vw !important;">I'm
                             a Front End Web
                             Developer</small></p>
@@ -103,67 +103,95 @@
 
     <!-- code for skills data -->
     <h1 class="mx-5 my-3">Skills</h1>
-    <div class="card-group">
-        <div class="card mx-3">
-            <img src="html-css.jpg" class="card-img-top" title="HTML 5" alt="Error">
+    <div class="row mx-1">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="react.jpg" class="card-img-top rounded-pill" title="React JS" alt="Error">
             <div class="card-body">
-                <h5 class="card-title">HTML & CSS</h5>
+                <h5 class="card-title">ReactJS</h5>
                 <p class="card-text">
-                <ul>
-                    <li>HTML stands for Hyper Text Markup Language, define the content of web pages.</li>
-                    <li>CSS stands for Cascading Style Sheets, specify the layout of web pages.</li>
-                </ul>
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
                 </p>
             </div>
-            <div class="card-footer">
-                <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
-            </div>
         </div>
-        <div class="card mx-3">
-            <img src="bootstrap.jpg" class="card-img-top" title="CSS & Bootstrap" alt="Error">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="redux.png" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
             <div class="card-body">
-                <h5 class="card-title">Bootstrap</h5>
+                <h5 class="card-title">Redux</h5>
                 <p class="card-text">
-                <ul>
-                    <li>Bootstrap is the most popular HTML, CSS, and JavaScript framework.</li>
-                    <li>Used for developing responsive, mobile-first websites.</li>
-                </ul>
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
                 </p>
             </div>
-            <div class="card-footer">
-                <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="axios.png" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">Axios</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                </p>
             </div>
         </div>
-        <div class="card mx-3">
-            <img src="js.jpg" class="card-img-top" title="JavaScript" alt="Error">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="git.png" class="card-img-top rounded-pill" title="CSS & Bootstrap" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">Git/GitHub</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="js.jpg" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">JavaScript</h5>
                 <p class="card-text">
-                <ul>
-                    <li>JavaScript is the world's most popular programming language.</li>
-                    <li>This is the programming language of the Web.</li>
-                    <li>This is use to program the behavior of web pages.</li>
-                </ul>
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
                 </p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
             </div>
         </div>
-        <div class="card mx-3">
-            <img src="react.jpg" class="card-img-top" title="React JS" alt="Error">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="bootstrap.jpg" class="card-img-top rounded-pill" title="CSS & Bootstrap" alt="Error">
             <div class="card-body">
-                <h5 class="card-title">React JS</h5>
+                <h5 class="card-title">Bootstrap</h5>
                 <p class="card-text">
-                <ul>
-                    <li>React is a JavaScript library for building user interfaces.</li>
-                    <li>React is used to build single-page applications.</li>
-                    <li>React allows us to create reusable UI components.</li>
-                </ul>
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
                 </p>
             </div>
-            <div class="card-footer">
-                <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="primeReact.jpeg" class="card-img-top rounded-pill" title="React JS" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">Prime React</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="coreui.jpg" class="card-img-top rounded-pill" title="React JS" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">Core UI</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="material.png" class="card-img-top rounded-pill" title="React JS" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">Material UI</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="html-css.jpg" class="card-img-top rounded-pill" title="HTML 5" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">HTML & CSS</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                </p>
             </div>
         </div>
     </div>
@@ -243,112 +271,6 @@
             </div>
         </div>
     </div> <br>
-
-    <!-- analog clock code -->
-    <!-- <div class="analogClock border py-5" id="analogClock">
-        <a class="btn btn-primary float-end bg-danger text-light" type="clear" role="button" onclick="cancle()">X</a>
-        <div id="clockContainer">
-            <div id="hour"></div>
-            <div id="minut"></div>
-            <div id="second"></div>
-        </div>
-    </div> -->
-
-    <!-- digital clock code -->
-    <!-- <div class="digiClock" id="digiClock">
-        <a class="btn btn-primary float-end bg-danger text-light" type="clear" role="button" onclick="cancle()">X</a>
-        <div class="container">
-            <div class="datetime">
-                <div class="date">
-                    <span id="dayname">Day</span>,
-                    <span id="month">Month</span>
-                    <span id="daynum">00</span>,
-                    <span id="year">Year</span>
-                </div>
-                <div class="time">
-                    <span id="hours">00</span> :
-                    <span id="minutes">00</span> :
-                    <span id="seconds">00</span>
-                    <span id="periods">AM</span>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-    <!-- digital calculator code -->
-    <!-- <div class="digiCalculator" id="digiCalculator">
-        <div class="containerCalcy">
-            <a class="btn btn-primary float-end bg-danger text-light" type="clear" role="button"
-                onclick="cancle()">X</a>
-            <h1> Digital Calculator</h1>
-
-            <div class="calcy">
-                <input type="text" name="screen" id="screen">
-                <table>
-                    <tr>
-                        <td><button>(</button></td>
-                        <td><button>)</button></td>
-                        <td><button style="background-color: red;">C</button></td>
-                        <td><button>%</button></td>
-                    </tr>
-                    <tr>
-                        <td><button>7</button></td>
-                        <td><button>8</button></td>
-                        <td><button>9</button></td>
-                        <td><button>X</button></td>
-                    </tr>
-                    <tr>
-                        <td><button>4</button></td>
-                        <td><button>5</button></td>
-                        <td><button>6</button></td>
-                        <td><button>-</button></td>
-                    </tr>
-                    <tr>
-                        <td><button>1</button></td>
-                        <td><button>2</button></td>
-                        <td><button>3</buttoni>
-                        </td>
-                        <td><button>+</button></td>
-                    </tr>
-                    <tr>
-                        <td><button>0</button></td>
-                        <td><button>.</button></td>
-                        <td><button>/</button></td>
-                        <td><button style="background-color: rgb(2, 255, 2);">=</button></td>
-                    </tr>
-                </table>
-            </div>
-
-        </div>
-    </div> -->
-
-    <!-- tic tac toe game code -->
-    <!-- <div class="tictac" id="tictac">
-        <a class="btn btn-primary float-end bg-danger text-light" type="clear" role="button" onclick="cancle()">X</a>
-        <div class="gameContainer">
-            <div class="containerTictac">
-                <div class="box bl-0 bt-0"><span class="boxtext text-dark"></span></div>
-                <div class="box bt-0"><span class="boxtext text-dark"></span></div>
-                <div class="box bt-0 br-0"><span class="boxtext text-dark"></span></div>
-                <div class="box bl-0"><span class="boxtext text-dark"></span></div>
-                <div class="box"><span class="boxtext text-dark"></span></div>
-                <div class="box br-0"><span class="boxtext text-dark"></span></div>
-                <div class="box bl-0 bb-0"><span class="boxtext text-dark"></span></div>
-                <div class="box bb-0"><span class="boxtext text-dark"></span></div>
-                <div class="box bb-0 br-0"><span class="boxtext text-dark"></span></div>
-            </div>
-            <div class="gameInfo">
-                <h1>Welcome to Tic Tac Toe</h1>
-                <div>
-                    <span class="info text-light">Turn for X</span>
-                    <button id="reset">Reset</button>
-                </div>
-                <div class="imgbox">
-                    <img src="excited.gif" alt="Error">
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- major project with external link -->
     <a name="weather"></a>
