two minor projects added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                             <li><a class="dropdown-item hovr" href="#miniProjects">Digital Clock</a></li>
                             <li><a class="dropdown-item hovr" href="#miniProjects">Calculator</a></li>
                             <li><a class="dropdown-item hovr" href="#miniProjects">Tic Tac Toe game</a></li>
+                            <li><a class="dropdown-item hovr" href="#miniProjects">Public Lbrary</a></li>
+                            <li><a class="dropdown-item hovr" href="#miniProjects">ElectroForce</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown mx-2">
@@ -59,8 +61,8 @@
                             Major Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item hovr" href="#weather">Weather App</a></li>
-                            <li><a class="dropdown-item hovr" href="#library">Public Library</a></li>
+                            <!-- <li><a class="dropdown-item hovr" href="#weather">Weather App</a></li>
+                            <li><a class="dropdown-item hovr" href="#library">Public Library</a></li> -->
                             <li><a class="dropdown-item hovr" href="#electroForce">ElectroForce</a></li>
                             <li><a class="dropdown-item hovr" href="#textUtils">TextUtils</a></li>
                         </ul>
@@ -105,7 +107,7 @@
     <h1 class="mx-5 my-3">Skills</h1>
     <div class="row mx-1">
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="react.jpg" class="card-img-top rounded-pill" title="React JS" alt="Error">
+            <img src="images/react.jpg" class="card-img-top rounded-pill" title="React JS" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">ReactJS</h5>
                 <p class="card-text">
@@ -114,7 +116,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="redux.png" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
+            <img src="images/redux.png" class="card-img-top rounded-pill" title="Redux" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Redux</h5>
                 <p class="card-text">
@@ -123,7 +125,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="axios.png" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
+            <img src="images/axios.png" class="card-img-top rounded-pill" title="Axios" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Axios</h5>
                 <p class="card-text">
@@ -132,7 +134,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="git.png" class="card-img-top rounded-pill" title="CSS & Bootstrap" alt="Error">
+            <img src="images/git.png" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Git/GitHub</h5>
                 <p class="card-text">
@@ -141,7 +143,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="js.jpg" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
+            <img src="images/js.jpg" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">JavaScript</h5>
                 <p class="card-text">
@@ -150,7 +152,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="bootstrap.jpg" class="card-img-top rounded-pill" title="CSS & Bootstrap" alt="Error">
+            <img src="images/bootstrap.jpg" class="card-img-top rounded-pill" title="Bootstrap" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Bootstrap</h5>
                 <p class="card-text">
@@ -159,7 +161,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="primeReact.jpeg" class="card-img-top rounded-pill" title="React JS" alt="Error">
+            <img src="images/primeReact.jpeg" class="card-img-top rounded-pill" title="Prime React" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Prime React</h5>
                 <p class="card-text">
@@ -168,7 +170,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="coreui.jpg" class="card-img-top rounded-pill" title="React JS" alt="Error">
+            <img src="images/coreui.jpg" class="card-img-top rounded-pill" title="Core UI" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Core UI</h5>
                 <p class="card-text">
@@ -177,7 +179,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="material.png" class="card-img-top rounded-pill" title="React JS" alt="Error">
+            <img src="images/material.png" class="card-img-top rounded-pill" title="Material UI" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Material UI</h5>
                 <p class="card-text">
@@ -186,7 +188,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
-            <img src="html-css.jpg" class="card-img-top rounded-pill" title="HTML 5" alt="Error">
+            <img src="images/html-css.jpg" class="card-img-top rounded-pill" title="HTML & CSS" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">HTML & CSS</h5>
                 <p class="card-text">
@@ -199,74 +201,83 @@
     <!-- mini projects with js preview -->
     <a name="miniProjects"></a>
     <h1 class="mx-5 my-4">Mini Projects</h1>
-    <div class="card-group">
-        <div class="card mx-3">
-            <img src="https://source.unsplash.com/500x500/?analog,clock,time" class="card-img-top" title="Analog Clock"
-                alt="Error">
+    <div class="row mx-1">
+        <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
+            <img src="https://source.unsplash.com/500x250/?tic-tac-toe,games,sports" class="card-img-top rounded-pill"
+                title="Tic Tac Toe Game" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">Tic Tac Toe Game</h5>
+                <p class="card-text">
+                    <a href="https://github.com/sak03/tic-tac-toe" target="blank">GitHub repositorie link >></a>
+                </p>
+                <a class="btn btn-outline-primary" href="https://sak03.github.io/tic-tac-toe/" target="blank"
+                    role="button">Project preview</a>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
+            <img src="https://source.unsplash.com/500x250/?books,college,library" class="card-img-top rounded-pill"
+                title="Digital Calculator" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">Public Lbrary</h5>
+                <p class="card-text">
+                    <a href="https://github.com/sak03/publicLibrary" target="blank">GitHub repositorie link >></a>
+                </p>
+                <a class="btn btn-outline-primary" href="https://sak03.github.io/publicLibrary/" target="blank"
+                    role="button">Project preview</a>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
+            <img src="https://source.unsplash.com/500x250/?fan,bulb,lightning,light" class="card-img-top rounded-pill"
+                title="Tic Tac Toe Game" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">ElectroForce</h5>
+                <p class="card-text">
+                    <a href="https://github.com/sak03/ElectroForce" target="blank">GitHub repositorie link >></a>
+                </p>
+                <a class="btn btn-outline-primary" href="https://sak03.github.io/ElectroForce/" target="blank"
+                    role="button">Project preview</a>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
+            <img src="https://source.unsplash.com/500x250/?analog,clock,time" class="card-img-top rounded-pill"
+                title="Analog Clock" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Analog Clock</h5>
                 <p class="card-text">
-                <ul>
-                    <li>This is a real time analog clock.</li>
-                    <li>Fully functional and responsive.</li>
-                    <li><a href="https://github.com/sak03/analog_clock" target="blank">GitHub repositorie link >></a>
+                    <a href="https://github.com/sak03/analog_clock" target="blank">GitHub repositorie link >></a>
+                    <!-- <ul>
+                
+                    <li>
                     </li>
-                </ul>
+                </ul> -->
                 </p>
                 <a class="btn btn-outline-primary" href="https://sak03.github.io/analog_clock/" target="blank"
                     role="button">Project
                     preview</a>
             </div>
         </div>
-        <div class="card mx-3">
-            <img src="https://source.unsplash.com/500x500/?digital,clock" class="card-img-top" title="Digital Clock"
-                alt="Error">
+        <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
+            <img src="https://source.unsplash.com/500x250/?digital,clock" class="card-img-top rounded-pill"
+                title="Digital Clock" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Digital Clock</h5>
                 <p class="card-text">
-                <ul>
-                    <li>This is a real time digital clock.</li>
-                    <li>Fully functional and responsive.</li>
-                    <li><a href="https://github.com/sak03/digital-clock" target="blank">GitHub repositorie link >></a>
-                    </li>
-                </ul>
+                    <a href="https://github.com/sak03/digital-clock" target="blank">GitHub repositorie link >></a>
                 </p>
                 <a class="btn btn-outline-primary" href="https://sak03.github.io/digital-clock/" target="blank"
                     role="button">Project
                     preview</a>
             </div>
         </div>
-        <div class="card mx-3">
-            <img src="https://source.unsplash.com/500x500/?calculator" class="card-img-top" title="Digital Calculator"
-                alt="Error">
+        <div class="col-sm-12 col-md-6 col-lg-3 mt-2">
+            <img src="https://source.unsplash.com/500x250/?calculator" class="card-img-top rounded-pill"
+                title="Digital Calculator" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Digital Calculator</h5>
                 <p class="card-text">
-                <ul>
-                    <li>This is a simple digital calculator.</li>
-                    <li>Fully functional and responsive.</li>
-                    <li><a href="https://github.com/sak03/Calculator" target="blank">GitHub repositorie link >></a>
-                    </li>
-                </ul>
+                    <a href="https://github.com/sak03/Calculator" target="blank">GitHub repositorie link >></a>
                 </p>
                 <a class="btn btn-outline-primary" href="https://sak03.github.io/Calculator/" target="blank"
-                    role="button">Project preview</a>
-            </div>
-        </div>
-        <div class="card mx-3">
-            <img src="https://source.unsplash.com/500x500/?tic-tac-toe,games,sports" class="card-img-top"
-                title="Tic Tac Toe Game" alt="Error">
-            <div class="card-body">
-                <h5 class="card-title">Tic Tac Toe Game</h5>
-                <p class="card-text">
-                <ul>
-                    <li>This is a Tic Tac Toe game.</li>
-                    <li>Fully functional and responsive.</li>
-                    <li><a href="https://github.com/sak03/tic-tac-toe" target="blank">GitHub repositorie link >></a>
-                    </li>
-                </ul>
-                </p>
-                <a class="btn btn-outline-primary" href="https://sak03.github.io/tic-tac-toe/" target="blank"
                     role="button">Project preview</a>
             </div>
         </div>
@@ -304,7 +315,7 @@
         </div>
     </div> <br>
 
-    <a name="library"></a>
+    <!-- <a name="library"></a>
     <div class="card mb-3 border-0" style="max-width: 80%; margin: 0 auto;">
         <div class="row g-0">
             <div class="col-md-8">
@@ -331,9 +342,9 @@
                     alt="...">
             </div>
         </div>
-    </div> <br>
+    </div> <br> -->
 
-    <a name="electroForce"></a>
+    <!-- <a name="electroForce"></a>
     <div class="card mb-3 border-0" style="max-width: 80%; margin: 0 auto;">
         <div class="row g-0">
             <div class="col-md-4">
@@ -359,7 +370,7 @@
                 </div>
             </div>
         </div>
-    </div> <br>
+    </div> <br> -->
 
     <a name="textUtils"></a>
     <div class="card mb-3 border-0" style="max-width: 80%; margin: 0 auto;">
@@ -427,12 +438,12 @@
     <!-- contact information -->
     <a name="contact"></a>
     <h1 class="mx-3 my-4">Contact Info</h1>
-    <div class="row ms-lg-5">
+    <div class="row mx-2">
         <div class="col-sm-12 col-md-4 col-lg-4">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 conct">
                     <div class="col-md-4">
-                        <img src="phone_logo.png" class="img-fluid rounded-start" alt="Error">
+                        <img src="images/phone_logo.png" class="img-fluid rounded-start" alt="Error">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -448,7 +459,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 conct">
                     <div class="col-md-3">
-                        <img src="email_logo.png" class="img-fluid rounded-start" alt="Error">
+                        <img src="images/email_logo.png" class="img-fluid rounded-start" alt="Error">
                     </div>
                     <div class="col-md-9">
                         <div class="card-body">
@@ -464,7 +475,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 conct">
                     <div class="col-md-4">
-                        <img src="map-marker_logo.png" class="img-fluid rounded-start" alt="Error">
+                        <img src="images/map-marker_logo.png" class="img-fluid rounded-start" alt="Error">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -480,23 +491,23 @@
     <!-- footer details -->
     <footer class="bg-dark Text-white foot">
         <div class="container text-center text-md-start bg-dark foot">
-            <div class="row text-center">
+            <div class="row justify-content-between">
 
                 <div class="col-md-4 col-lg-4 mt-3 w-auto">
-                    <h3 class="mb-4 text-white hovr"> SARTAJ ALAM</h3>
-                    <p class="text-white">Your Complete Web Solution</p>
+                    <h5 class="mb-1 text-white hovr"> SARTAJ ALAM</h5>
+                    <small class="mb-1 text-white">Your Complete Web Solution</small>
                 </div>
 
                 <div class="col-md-4 col-lg-4 col-xl-3 mt-3 w-auto">
-                    <h3 class="mb-4 text-white text-warning hovr"> Skills</h3>
-                    <p> <a href="#skills" class="text-white hovr" style="text-decoration:none">Front End Web
-                            Developer</a>
-                    </p>
+                    <h5 class="mb-1 text-white text-warning hovr"> Expert In</h5>
+                    <small> <a href="#skills" class="text-white hovr" style="text-decoration:none">Front End Web
+                            Development</a>
+                    </small>
                 </div>
 
-                <div class="col-md-4 col-lg-4 mx-3 w-auto" style="flex: right;">
+                <div class="col-md-4 col-lg-4 mt-3 w-auto" style="flex: right;">
                     <div class="text-center text-md-right">
-                        <h3 class="mb-4 text-center text-white hovr mt-2">Follow Me</h3>
+                        <h5 class="mb-1 text-center text-white hovr">Follow Me</h5>
                         <ul class="list-unstyled list-inline">
                             <li class="list-inline-item"> <a href="https://linkedin.com/in/sartaj-alam-7a520b106"
                                     class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
@@ -504,15 +515,15 @@
                             <li class="list-inline-item"> <a href="https://github.com/sak03"
                                     class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
                                     <i class="fab fa-github-square"></i></a></li>
-                            <li class="list-inline-item"> <a href="https://www.facebook.com/"
+                            <!-- <li class="list-inline-item"> <a href="https://www.facebook.com/"
                                     class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
-                                    <i class="fab fa-facebook-square"></i></a></li>
+                                    <i class="fab fa-facebook-square"></i></a></li> -->
                             <li class="list-inline-item"> <a href="https://twitter.com/sartaj_03"
                                     class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
                                     <i class="fab fa-twitter"></i></a></li>
-                            <li class="list-inline-item"> <a href="https://www.instagram.com/"
+                            <!-- <li class="list-inline-item"> <a href="https://www.instagram.com/"
                                     class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
-                                    <i class="fab fa-instagram"></i></a></li>
+                                    <i class="fab fa-instagram"></i></a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -521,13 +532,11 @@
 
         <hr style="color: white;">
 
-        <div class="row align-items-center">
-            <div class="col-md-8  col-lg-12 text-center">
-                <p class="text-white"> &emsp; Copyright &emsp; &copy; All rights researved by: <a href="#"
-                        class="text-light hovr" style="text-decoration: none;">
-                        &emsp;Sarta
-                        Alam</a></p>
-            </div>
+        <div class="d-flex align-items-center justify-content-between">
+            <p class="text-white mx-2"> &emsp; Copyright &copy; All rights reserved </p>
+            <p class="text-white mx-3">Maintained by: <a href="#" class="text-light hovr"
+                    style="text-decoration: none;"> Sarta
+                    Alam</a></p>
         </div>
     </footer>
 
